--- a/package.json
+++ b/package.json
@@ -10,12 +10,22 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-native-community/masked-view": "^0.1.11",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-fontawesome": "^7.0.0",
+    "react-native-gesture-handler": "^2.5.0",
+    "react-native-safe-area-context": "^4.3.1",
+    "react-native-svg": "^12.4.4",
+    "react-native-web": "0.17.7",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
